<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="FB_AddAllAxes" Id="{82897557-630f-42f2-9dc0-c94f0234539c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_AddAllAxes
VAR_INPUT
	Execute				: BOOL;
END_VAR
VAR_OUTPUT
	Done				: BOOL;
	Busy				: BOOL;
	Error				: BOOL;
END_VAR
VAR
	fbAddAxis			: ARRAY[1..cAxesCount] OF MC_AddAxisToGroup;
	i					: UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Done := TRUE;
Busy := FALSE;
Error := FALSE;

fbAddAxis[1].IdentInGroup := MCS_X; //X-Axis
fbAddAxis[2].IdentInGroup := MCS_Y; //Y-Axis
fbAddAxis[3].IdentInGroup := MCS_Z; //Z-Axis
//fbAddAxis[4].IdentInGroup := MCS_C1;//1st rotation is C-rotation (around Z-Axis)

FOR i:=1 TO cAxesCount DO
	fbAddAxis[i](AxesGroup:=stGroupRef, Axis := stAxis[i], Execute := Execute);

	IF (NOT fbAddAxis[i].Done) THEN
		Done := FALSE;
	END_IF
	IF (fbAddAxis[i].Busy) THEN
		Busy := TRUE;
	END_IF
	IF (fbAddAxis[i].Error) THEN
		Error := TRUE;
	END_IF
END_FOR]]></ST>
    </Implementation>
    <LineIds Name="FB_AddAllAxes">
      <LineId Id="3" Count="20" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>